sumo/tests/duarouter/flows/errors/vehicle_false_arrivallane/errors.duarouter
Error: Invalid arrivalLane definition for flow '0';
 must be one of ("current", or int>0)
Quitting (on error).
